--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -92,80 +92,75 @@
             app:layout_constraintBottom_toTopOf="@+id/imageView62"
             android:weightSum="2">
 
-            <LinearLayout
-                android:id="@+id/ll_for_AddTask"
-                android:layout_width="360dp"
-                android:layout_height="0dp"
-                android:layout_weight="0.25"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/white_rectangle_patient_list"
-                android:weightSum="3"
-                android:orientation="horizontal"
-                android:layout_gravity="center"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cd_for_AddTask"
+                android:layout_width="375dp"
+                android:layout_height="64dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                app:cardCornerRadius="30dp"
+                app:layout_constraintStart_toStartOf="parent"
                 android:visibility="gone"
-                android:gravity="center"
-                >
+                app:layout_constraintTop_toBottomOf="@+id/task_list_searchView">
+
+                <Button
+                    android:id="@+id/add_task_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:alpha="0"
+                    android:backgroundTint="@color/_bg__new_homepage___ek2_color"
+                    android:text="" />
+
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight=".6"
-                    android:orientation="vertical"
-                    >
-                    <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.2"
-                        android:layout_marginStart="5dp"
-                        android:background="@color/white"
-                        android:src="@drawable/orange_circle"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.9"
-                    android:orientation="vertical"
-                    >
+                    android:id="@+id/task_list_overview_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:padding="15dp">
+
+                    <ImageView
+                        android:id="@+id/imageView55"
+                        android:layout_width="35dp"
+                        android:layout_height="33dp"
+                        android:contentDescription="TODO"
+                        app:srcCompat="@drawable/red_circle" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="Add Task"
-                        android:textColor="@android:color/black"
-                        android:textSize="20sp"
-                        android:translationZ="2dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/patient_list_company_icon" />
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="6dp"
+                        android:fontFamily="sans-serif-black"
+                        android:text="@string/add_task"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+
+                    <ImageView
+                        android:id="@+id/imageView64"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_marginLeft="190dp"
+                        android:contentDescription="TODO"
+                        app:srcCompat="@drawable/add_image_button"
+                        tools:layout_editor_absoluteX="337dp"
+                        tools:layout_editor_absoluteY="234dp" />
 
                 </LinearLayout>
 
+            </androidx.cardview.widget.CardView>
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
-                    android:padding="5dp"
-                    android:gravity="start"
-                    android:orientation="vertical"
-                    >
-                <ImageButton
-                    android:id="@+id/Iv_for_AddTask"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                     android:padding="5dp"
-                    android:background="@color/white"
 
-                    android:src="@drawable/add_image_button"/>
-                </LinearLayout>
-            </LinearLayout>
 
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycleView"
-                android:layout_width="360dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="8dp"
                 android:layout_weight="1.75"
                 android:gravity="center"
+                android:layout_margin="10dp"
                 android:layout_gravity="center"
                />
 
