--- a/app/src/main/res/layout/activity_homepage4admin.xml
+++ b/app/src/main/res/layout/activity_homepage4admin.xml
@@ -6,218 +6,234 @@
         android:layout_height="match_parent"
         tools:context="deakin.gopher.guardian.view.general.Homepage4admin">
 
-    <TextView
-        android:id="@+id/newUserText"
-        android:layout_width="87dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="82dp"
-        android:layout_marginTop="128dp"
-        android:elevation="4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/new_user"
-        android:textColor="@color/white"
-        android:textSize="13sp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/newUserText"
+            android:layout_width="87dp"
+            android:layout_height="24dp"
+            android:elevation="4dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/new_user"
+            android:textColor="@color/white"
+            android:textSize="13sp"
+            android:translationX="82dp"
+            android:translationY="309dp" />
 
-    <TextView
-        android:id="@+id/newPaitentText"
-        android:layout_width="87dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="256dp"
-        android:layout_marginTop="128dp"
-        android:elevation="4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/new_patient"
-        android:textColor="@color/white"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <TextView
+            android:id="@+id/newPaitentText"
+            android:layout_width="87dp"
+            android:layout_height="24dp"
+            android:elevation="4dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/new_patient"
+            android:textColor="@color/white"
+            android:textSize="13sp"
+            android:translationX="256dp"
+            android:translationY="309dp" />
 
-    <TextView
-        android:id="@+id/sighOutTxt"
-        android:layout_width="102dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="268dp"
-        android:layout_marginTop="428dp"
-        android:elevation="4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/sign_out"
-        android:textColor="@color/white"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <TextView
+            android:id="@+id/sighOutTxt"
+            android:layout_width="102dp"
+            android:layout_height="26dp"
+            android:elevation="4dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/sign_out"
+            android:textColor="@color/white"
+            android:textSize="13sp"
+            android:translationX="268dp"
+            android:translationY="609dp" />
 
-    <TextView
-        android:id="@+id/dailyReportTxt"
-        android:layout_width="102dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="256dp"
-        android:layout_marginTop="272dp"
-        android:elevation="4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/daily_report"
-        android:textColor="@color/white"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <TextView
+            android:id="@+id/dailyReportTxt"
+            android:layout_width="102dp"
+            android:layout_height="26dp"
+            android:elevation="4dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/daily_report"
+            android:textColor="@color/white"
+            android:textSize="13sp"
+            android:translationX="256dp"
+            android:translationY="453dp" />
 
-    <View
-        android:id="@+id/settingsIcon"
-        android:layout_width="53dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="364dp"
-        android:background="@drawable/menu_settings"
-        android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <View
+            android:id="@+id/settingsIcon"
+            android:layout_width="53dp"
+            android:layout_height="43dp"
+            android:background="@drawable/menu_settings"
+            android:elevation="4dp"
+            android:translationX="92dp"
+            android:translationY="545dp" />
 
-    <Button
-        android:id="@+id/patientListButton"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="180dp"
-        android:background="@drawable/homepage_button_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <Button
+            android:id="@+id/patientListButton"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@drawable/homepage_button_background"
+            android:translationX="52dp"
+            android:translationY="361dp" />
 
-    <TextView
-        android:id="@+id/patientListTxt"
-        android:layout_width="102dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="272dp"
-        android:elevation="4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/patient_list"
-        android:textColor="@color/white"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <TextView
+            android:id="@+id/patientListTxt"
+            android:layout_width="102dp"
+            android:layout_height="26dp"
+            android:elevation="4dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/patient_list"
+            android:textColor="@color/white"
+            android:textSize="13sp"
+            android:translationX="72dp"
+            android:translationY="453dp" />
 
-    <View
-        android:id="@+id/newUserIcon"
-        android:layout_width="42dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="72dp"
-        android:background="@drawable/add_new_user"
-        android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <View
+            android:id="@+id/newUserIcon"
+            android:layout_width="42dp"
+            android:layout_height="44dp"
+            android:background="@drawable/add_new_user"
+            android:elevation="4dp"
+            android:translationX="92dp"
+            android:translationY="253dp" />
 
+        <View
+            android:id="@+id/patientListIcon"
+            android:layout_width="42dp"
+            android:layout_height="44dp"
+            android:background="@drawable/patient_list_icon"
+            android:elevation="4dp"
+            android:translationX="92dp"
+            android:translationY="397dp" />
 
-    <View
-        android:id="@+id/patientListIcon"
-        android:layout_width="42dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="216dp"
-        android:background="@drawable/patient_list_icon"
-        android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <TextView
+            android:id="@+id/settingsTxt"
+            android:layout_width="102dp"
+            android:layout_height="26dp"
+            android:elevation="4dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/settings"
+            android:textColor="@color/white"
+            android:textSize="13sp"
+            android:translationX="86dp"
+            android:translationY="609dp" />
 
-    <TextView
-        android:id="@+id/settingsTxt"
-        android:layout_width="102dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="428dp"
-        android:elevation="4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/settings"
-        android:textColor="@color/white"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <Button
+            android:id="@+id/sighOutButton"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@drawable/homepage_button_background"
+            android:translationX="236dp"
+            android:translationY="513dp" />
 
-    <Button
-        android:id="@+id/sighOutButton"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="236dp"
-        android:layout_marginTop="332dp"
-        android:background="@drawable/homepage_button_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <View
+            android:id="@+id/newPatientIcon"
+            android:layout_width="55dp"
+            android:layout_height="44dp"
+            android:background="@drawable/new_patient_icon"
+            android:elevation="4dp"
+            android:translationX="270dp"
+            android:translationY="253dp" />
 
-    <View
-        android:id="@+id/newPatientIcon"
-        android:layout_width="55dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="270dp"
-        android:layout_marginTop="72dp"
-        android:background="@drawable/new_patient_icon"
-        android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <Button
+            android:id="@+id/newUserButton"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@drawable/homepage_button_background"
+            android:translationX="52dp"
+            android:translationY="217dp" />
 
+        <Button
+            android:id="@+id/newPaitentButton"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@drawable/homepage_button_background"
+            android:translationX="236dp"
+            android:translationY="217dp" />
 
-    <Button
-        android:id="@+id/newUserButton"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="36dp"
-        android:background="@drawable/homepage_button_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <View
+            android:id="@+id/dailyReportIcon"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:background="@drawable/daily_report_icon"
+            android:elevation="4dp"
+            android:translationX="276dp"
+            android:translationY="397dp" />
 
-    <Button
-        android:id="@+id/newPaitentButton"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="236dp"
-        android:layout_marginTop="36dp"
-        android:background="@drawable/homepage_button_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <Button
+            android:id="@+id/settingsButton"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@drawable/homepage_button_background"
+            android:translationX="52dp"
+            android:translationY="513dp" />
 
-    <View
-        android:id="@+id/dailyReportIcon"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="276dp"
-        android:layout_marginTop="216dp"
-        android:background="@drawable/daily_report_icon"
-        android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <View
+            android:id="@+id/sighOutIcon"
+            android:layout_width="53dp"
+            android:layout_height="43dp"
+            android:background="@drawable/menu_signout"
+            android:elevation="4dp"
+            android:translationX="276dp"
+            android:translationY="545dp" />
 
-    <Button
-        android:id="@+id/settingsButton"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="332dp"
-        android:background="@drawable/homepage_button_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <Button
+            android:id="@+id/dailyReportButton4caretaker"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:background="@drawable/homepage_button_background"
+            android:translationX="236dp"
+            android:translationY="361dp" />
 
-    <View
-        android:id="@+id/sighOutIcon"
-        android:layout_width="53dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="276dp"
-        android:layout_marginTop="364dp"
-        android:background="@drawable/menu_signout"
-        android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-    <Button
-        android:id="@+id/dailyReportButton4caretaker"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="236dp"
-        android:layout_marginTop="180dp"
-        android:background="@drawable/homepage_button_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+            <Button
+                android:id="@+id/tasksButton_admin"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:background="@drawable/homepage_button_background"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tasksTxt_admin"
+                android:layout_width="88dp"
+                android:layout_height="28dp"
+                android:elevation="4dp"
+                android:fontFamily="@font/poppins_bold"
+                android:text="@string/tasks_label"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="13sp"
+                app:layout_constraintBottom_toBottomOf="@+id/tasksButton_admin"
+                app:layout_constraintEnd_toEndOf="@+id/tasksButton_admin"
+                app:layout_constraintStart_toStartOf="@+id/tasksButton_admin" />
+
+            <View
+                android:id="@+id/patientListIcon_admin"
+                android:layout_width="42dp"
+                android:layout_height="44dp"
+                android:background="@drawable/menu_button"
+                android:elevation="4dp"
+                app:layout_constraintBottom_toTopOf="@+id/tasksTxt_admin"
+                app:layout_constraintEnd_toEndOf="@+id/tasksButton_admin"
+                app:layout_constraintStart_toStartOf="@+id/tasksButton_admin"
+                app:layout_constraintTop_toTopOf="@+id/tasksButton_admin" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <androidx.cardview.widget.CardView
