Caretaker is able to upload a careplan for their patients.
Trello card : https://trello.com/c/ThTltNLj/34-upload-care-plan

Test Video: https://deakin.au.panopto.com/Panopto/Pages/Viewer.aspx?id=ed0c4cf7-7b12-4649-b18d-b16f00d361e7

--- a/app/src/main/res/layout/activity_care_plan_summary.xml
+++ b/app/src/main/res/layout/activity_care_plan_summary.xml
@@ -311,6 +311,7 @@
             android:background="@drawable/careplan_button"
             android:inputType="textMultiLine"
             android:text="@string/_7"
+            android:isIndicator = "true"
             app:layout_constraintStart_toStartOf="@+id/textView1311"
             app:layout_constraintTop_toBottomOf="@+id/textView1311" />
 
