--- a/app/src/main/res/layout/activity_care_plan.xml
+++ b/app/src/main/res/layout/activity_care_plan.xml
@@ -402,7 +402,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/careplan_button"
-                android:text="@string/_8pm_4pm"
+                android:text="@string/_8pm_4am"
                 android:textStyle="bold" />
 
             <RadioButton
