Caretaker create a new task for their patients. Created an interface that allows caretaker to add new tasks. Added a plus icon to add new task.
Trello Card: https://trello.com/c/1ryyG2Rl/87-caretaker-create-new-task

--- a/app/src/main/res/layout/activity_homepage4caretaker.xml
+++ b/app/src/main/res/layout/activity_homepage4caretaker.xml
@@ -61,30 +61,56 @@
         android:gravity="center" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/sighOutButton"
+        android:id="@+id/taskListButton"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="240dp"
+        android:elevation="20dp"
+        android:fontFamily="@font/poppins_bold"
+        android:gravity="center"
+        android:paddingTop="20dp"
+        android:paddingBottom="16dp"
+        android:stateListAnimator="@animator/button_state_list_animator"
+        android:text="@string/task_list"
+        android:textColor="@color/off_white"
+        android:textSize="11sp"
+        app:backgroundTint="@color/deep_blue"
+        app:cornerRadius="16dp"
+        app:icon="@drawable/patient_list_icon"
+        app:iconGravity="top"
+        app:iconPadding="10dp"
+        app:iconSize="42dp"
+        app:iconTint="@color/off_white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/sighOutButton"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="388dp"
+        android:elevation="20dp"
+        android:fontFamily="@font/poppins_bold"
+        android:gravity="center"
+        android:paddingStart="20dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="16dp"
+        android:stateListAnimator="@animator/button_state_list_animator"
+        android:text="@string/log_out"
+        android:textColor="@color/white"
+        android:textSize="11sp"
+        app:backgroundTint="@color/deep_blue"
+        app:cornerRadius="16dp"
         app:icon="@drawable/logout"
         app:iconGravity="top"
         app:iconPadding="10dp"
         app:iconSize="40dp"
-        app:cornerRadius="16dp"
-        android:elevation="20dp"
-        android:stateListAnimator="@animator/button_state_list_animator"
-        app:backgroundTint="@color/deep_blue"
-        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-        android:text="@string/log_out"
-        android:textColor="@color/white"
-        android:fontFamily="@font/poppins_bold"
-        android:textSize="11sp"
-        android:paddingTop="20dp"
-        android:paddingBottom="16dp"
-        android:paddingStart="20dp"
-        android:gravity="center" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/caretaker_profile"
