--- a/app/src/main/res/layout/activity_task_add.xml
+++ b/app/src/main/res/layout/activity_task_add.xml
@@ -50,6 +50,16 @@
                         android:inputType="textMultiLine" />
 
                     <EditText
+                        android:id="@+id/tasksubDescEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginTop="16dp"
+                        android:hint="Sub Description
+    "
+                        android:inputType="textMultiLine" />
+
+                    <EditText
                         android:id="@+id/taskPatientIdEditText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
