--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -64,7 +64,8 @@
         android:layout_margin="16dp"
         android:background="@drawable/dialog_bg2"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/task_button_mark_complete"
+        app:layout_constraintBottom_toTopOf="@id/buttons_container"
+        app:layout_constraintVertical_bias="0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_detail_title">
@@ -102,6 +103,7 @@
 
     <!-- Complete button -->
     <LinearLayout
+        android:id="@+id/buttons_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
