--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,11 +67,16 @@
     <style name="poppinsfontstyle1" parent="@android:style/TextAppearance.Small">
         <item name="android:fontFamily">@font/poppins</item>
     </style>
+
     <style name="menu_text_style" parent="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Menu">
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="CustomAutofillTextAppearance">
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
