Created account_authentication.xml, account_creation.xml, login_enter_pin.xml and uploaded strings, eye
new xml pages:
loading_splash.xml
loading_log_in.xml
forgot_the_password.xml
create_new_password.xml
verify_check.png
heart_gopher.png
ellipse.png

--- a/app/src/main/res/layout/forgot_the_password.xml
+++ b/app/src/main/res/layout/forgot_the_password.xml
@@ -66,8 +66,10 @@
                 android:paddingHorizontal="16dp"
                 android:textColor="@android:color/darker_gray"
                 android:textStyle="normal"
-                tools:layout_editor_absoluteX="36dp"
-                tools:layout_editor_absoluteY="217dp" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
             <TextView
                 android:id="@+id/enterPinText"
@@ -119,7 +121,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="315dp" />
+                app:layout_constraintBottom_toBottomOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
