--- a/app/src/main/res/layout/create_new_password.xml
+++ b/app/src/main/res/layout/create_new_password.xml
@@ -48,31 +48,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="46dp">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                app:passwordToggleEnabled="true"
-                tools:layout_editor_absoluteX="55dp"
-                tools:layout_editor_absoluteY="220dp">
-
-                <EditText
-                    android:id="@+id/Password"
-                    android:layout_width="300dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_horizontal"
-                    android:autofillHints=""
-                    android:background="@drawable/edit_text_border"
-                    android:ems="10"
-                    android:focusable="auto"
-                    android:hint="@string/hidden_password"
-                    android:inputType="textPassword"
-                    android:textColor="@android:color/darker_gray"
-                    android:textStyle="normal" />
-            </com.google.android.material.textfield.TextInputLayout>
+            android:padding="16dp">
 
             <TextView
                 android:id="@+id/enterPinText"
@@ -101,7 +77,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/enterPinText" />
 
-
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
@@ -112,22 +87,34 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:passwordToggleEnabled="true">
 
+
             </com.google.android.material.textfield.TextInputLayout>
 
-            <Button
-                android:id="@+id/createAccountBtn"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                android:layout_marginEnd="80dp"
-                android:backgroundTint="@color/TG_blue"
-                android:fontFamily="@font/poppins_bold"
-                android:text="@string/text_continue"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                app:cornerRadius="24dp"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="216dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:layout_editor_absoluteY="326dp"
-                tools:ignore="MissingConstraints" />
+                app:layout_constraintHorizontal_bias="0.696"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:passwordToggleEnabled="true">
+
+                <EditText
+                    android:id="@+id/Password"
+                    android:layout_width="300dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
+                    android:autofillHints=""
+                    android:background="@drawable/edit_text_border"
+                    android:ems="10"
+                    android:focusable="auto"
+                    android:hint="@string/hidden_password"
+                    android:inputType="textPassword"
+                    android:textColor="@android:color/darker_gray"
+                    android:textStyle="normal"
+                    tools:ignore="MissingConstraints" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <EditText
                 android:id="@+id/ConfirmPassword"
@@ -146,7 +133,23 @@
                 tools:layout_editor_absoluteY="268dp"
                 tools:ignore="MissingConstraints" />
 
+            <Button
+                android:id="@+id/createAccountBtn"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:backgroundTint="@color/TG_blue"
+                android:fontFamily="@font/poppins_bold"
+                android:text="@string/text_continue"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                app:cornerRadius="24dp"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="113dp"
+                tools:layout_editor_absoluteY="335dp" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     </ScrollView>
 
     <ImageView
